--- a/iqidss/pubspec.yaml
+++ b/iqidss/pubspec.yaml
@@ -46,6 +46,8 @@ flutter:
     - assets/background.jpg
     - assets/logo.gif
     - assets/background1.jpg
+    - assets/bg.png
+    - assets/main.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
