--- a/iqidss/pubspec.yaml
+++ b/iqidss/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   shimmer: ^1.0.1
+  audioplayers: ^0.15.1 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,10 +45,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/background.jpg
-    - assets/logo.gif
+    - assets/logo.gifF
     - assets/background1.jpg
     - assets/bg.png
     - assets/main.gif
+    - assets/
+    - assets/animalasset/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
