--- a/iqidss/pubspec.yaml
+++ b/iqidss/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   shimmer: ^1.0.1
   audioplayers: ^0.15.1 
+  rflutter_alert: ^1.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,12 +46,22 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/background.jpg
-    - assets/logo.gifF
+    - assets/logo.gif
     - assets/background1.jpg
     - assets/bg.png
     - assets/main.gif
     - assets/
     - assets/animalasset/
+
+    - assets/avocado.gif
+    - assets/carrot2.gif
+    - assets/broccoli.gif
+    - assets/eggplant2.gif
+    - assets/onion.gif
+    - assets/vegefruitbg.gif
+    - assets/congrats3.gif
+    - assets/vegefruitbg3.gif
+    - assets/ready.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
