--- a/iqidss/pubspec.yaml
+++ b/iqidss/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shimmer: ^1.0.1
   audioplayers: ^0.15.1 
   rflutter_alert: ^1.0.3
+  cached_network_image: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
