Add animal image

--- a/iqidss/pubspec.yaml
+++ b/iqidss/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/bg.png
     - assets/main.gif
     - assets/
+    - assets/animalasset/
 
     - assets/avocado.gif
     - assets/carrot2.gif
