--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   audioplayers: ^0.15.1 
   rflutter_alert: ^1.0.3
   cached_network_image: ^2.0.0
+  firebase_auth: ^0.16.1
+  auto_size_text: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
